--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ kotlin.code.style=official
 birds.app.jvmTarget=11
 birds.app.currentVersion=0.0.1
 kotlinVersion=1.7.21
+coroutinesVersion=1.6.4
+jacksonVersion=2.14.1
