m2l17 add serverless demo

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 kotlin.code.style=official
 birds.app.jvmTarget=11
 birds.app.currentVersion=0.0.1
-kotlinVersion=1.7.21
+kotlinVersion=1.6.20
 coroutinesVersion=1.6.4
 jacksonVersion=2.14.1
 openapiVersion=6.3.0
+serializationVersion=1.4.1
