--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,8 @@ jobs:
           distribution: 'temurin'
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
+      - name: Apt update
+        run: sudo apt-get update
       - name: Install curl-dev
         run: sudo apt install -y libcurl4-openssl-dev
       - name: Run Tests
