--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,8 @@ kotlinVersion=1.6.20
 coroutinesVersion=1.6.4
 jacksonVersion=2.14.1
 openapiVersion=6.3.0
+ktorVersion=2.2.4
+logbackVersion=1.2.11
+kotlinLogging=2.1.23
+kotlinDatetime=0.4.0
 serializationVersion=1.4.1
