m4l23 business logic with a chain of responsibility

--- a/birds-app-ktor/src/main/resources/application.yaml
+++ b/birds-app-ktor/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 ktor:
   application:
     modules:
-      - ApplicationKt.module
+      - ru.serj.birds.ApplicationKt.module
   deployment:
     port: "$PORT:8080"
