--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,10 @@ jobs:
       - name: Install curl-dev
         run: sudo apt install -y libcurl4-openssl-dev
       - name: Publish package
-        run: gradle publish
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Test package
         run: gradle check
