m4l23 try publishing birds-app-api-base-v1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,8 @@ jobs:
         run: sudo apt-get update
       - name: Install curl-dev
         run: sudo apt install -y libcurl4-openssl-dev
+      - name: Set gradlew executable
+        run: chmod +x ./gradlew
       - name: Publish package
         uses: gradle/gradle-build-action@v2
         with:
