--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,12 @@ jobs:
         run: sudo apt install -y libcurl4-openssl-dev
       - name: Set gradlew executable
         run: chmod +x ./gradlew
+
+      - uses: actions/delete-package-versions@v4
+        with:
+          package-name: 'birds-app-api-base-v1'
+          package-type: 'maven'
+
       - name: Publish package
         uses: gradle/gradle-build-action@v2
         with:
