m4l23 try publishing birds-app-api-base-v1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
 
       - uses: actions/delete-package-versions@v4
         with:
-          package-name: 'birds-app-api-base-v1'
+          package-name: 'ru.serj.birds-app-api-base-v1'
           package-type: 'maven'
 
       - name: Publish package
