--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,10 +29,10 @@ jobs:
       - name: Set gradlew executable
         run: chmod +x ./gradlew
 
-      - uses: actions/delete-package-versions@v4
-        with:
-          package-name: 'ru.serj.birds-app-api-base-v1'
-          package-type: 'maven'
+#      - uses: actions/delete-package-versions@v4
+#        with:
+#          package-name: 'ru.serj.birds-app-api-base-v1'
+#          package-type: 'maven'
 
       - name: Publish package
         uses: gradle/gradle-build-action@v2
