m4l23 try publishing birds-app-api-base-v1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,8 @@ jobs:
         with:
           package-name: 'ru.serj.birds-app-api-base-v1'
           package-type: 'maven'
-          package-version-ids: '0.0.1'
+          min-versions-to-keep: 1
+          ignore-versions: '^0\\.0\\.2$'
       - name: Publish package
         uses: gradle/gradle-build-action@v2
         with:
