m4l23 try publishing birds-app-api-base-v1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,7 @@ jobs:
           package-name: 'ru.serj.birds-app-api-base-v1'
           package-type: 'maven'
           min-versions-to-keep: 0
+          ignore-versions: '^0\\.0\\.2$'
       - name: Publish package
         uses: gradle/gradle-build-action@v2
         with:
