--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
           package-name: 'ru.serj.birds-app-api-base-v1'
           package-type: 'maven'
           min-versions-to-keep: 0
-          ignore-versions: '^(0|[1-9]\\d*)\\.0\\.0$'
+#          ignore-versions: '^(0|[1-9]\\d*)\\.0\\.0$'
           delete-only-pre-release-versions: "true"
       - name: Publish package
         uses: gradle/gradle-build-action@v2
