m5l28 - create logging modules

--- a/deploy/volumes/fluent-bit-etc/fluent-bit.conf
+++ b/deploy/volumes/fluent-bit-etc/fluent-bit.conf
@@ -12,6 +12,15 @@
 [INPUT]
   Name          forward
   Tag           app.logs
+  Listen        0.0.0.0
+  Port          24224
+
+[FILTER]
+    Name parser
+    Match app.*
+    Key_Name message
+    Parser json
+    Reserve_Data True
 
 [OUTPUT]
   Name opensearch
