--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: birds-app:0.0.5
+    image: birds-app-ktor:0.0.5
     ports:
       - "8080:8080"
     depends_on:
