m5l35 - add authorization machinery

--- a/birds-app-api-base-v1/spec/bird-spec-base-v1.yml
+++ b/birds-app-api-base-v1/spec/bird-spec-base-v1.yml
@@ -35,12 +35,14 @@ components:
       type: string
       description: Доступы для клиента для операций над tweet
       enum:
-        - read
-        - update
-        - delete
-        - makeVisiblePublic
-        - makeVisibleOwn
-        - makeVisibleGroup
+        - readPublic
+        - createOwn
+        - readOwn
+        - updateOwn
+        - deleteOwn
+        - readModerate
+        - updateModerate
+        - deleteModerate
     Error:
       type: object
       properties:
@@ -56,8 +58,10 @@ components:
       type: string
       description: Кто может просматривать твит
       enum:
-        - public
-        - followersOnly
+        - toOwner
+        - toFollower
+        - toUser
+        - toGuest
     TweetRequestDebugMode:
       type: string
       enum:
