--- a/birds-app-ktor/src/main/resources/application.yaml
+++ b/birds-app-ktor/src/main/resources/application.yaml
@@ -1,9 +1,14 @@
 ktor:
   application:
     modules:
-      - ru.serj.birds.ApplicationKt.module
+      - ru.serj.birds.ApplicationKt.moduleBird
   deployment:
     port: "$PORT:8080"
+jwt:
+  issuer: "http://localhost:8081/auth/realms/otus-marketplace"
+  audience: "ad-users"
+  realm: "otus-marketplace"
+  certPath: "http://localhost:8081/auth/realms/otus-marketplace/protocol/openid-connect/certs"
 logging:
   provider: "logback"
 dbms:
