--- a/birds-app-ktor/src/main/resources/application.yaml
+++ b/birds-app-ktor/src/main/resources/application.yaml
@@ -5,10 +5,11 @@ ktor:
   deployment:
     port: "$PORT:8080"
 jwt:
-  issuer: "http://localhost:8081/auth/realms/otus-marketplace"
+  keycloak: $KEYCLOAK_BASE_URL
+  issuer: "/auth/realms/otus-marketplace"
   audience: "ad-users"
   realm: "otus-marketplace"
-  certPath: "http://localhost:8081/auth/realms/otus-marketplace/protocol/openid-connect/certs"
+  certPath: "/auth/realms/otus-marketplace/protocol/openid-connect/certs"
 logging:
   provider: "logback"
 dbms:
