--- a/birds-app-ktor/src/main/resources/application.yaml
+++ b/birds-app-ktor/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ ktor:
   deployment:
     port: "$PORT:8080"
 jwt:
-  keycloak: $KEYCLOAK_BASE_URL
+  keycloak: "$KEYCLOAK_BASE_URL"
   issuer: "/auth/realms/otus-marketplace"
   audience: "ad-users"
   realm: "otus-marketplace"
