--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,5 @@
 name: 'CI-test'
+
 on:
   push:
     branches-ignore:
@@ -40,7 +41,7 @@ jobs:
           arguments: publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Test package
+      - name: Run Tests
         uses: gradle/gradle-build-action@v2
         with:
           arguments: check
