--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,8 @@ jobs:
         with:
           package-name: 'ru.serj.birds-app-api-base-v1'
           package-type: 'maven'
-          min-versions-to-keep: 1
+          min-versions-to-keep: 2
+          ignore-versions: '^\\.0\\.0\\.9$'
       - name: Publish package
         uses: gradle/gradle-build-action@v2
         with:
