--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
           package-name: 'ru.serj.birds-app-api-base-v1'
           package-type: 'maven'
           min-versions-to-keep: 0
-          ignore-versions: '^\\.0\\.0\\.9$'
+          ignore-versions: '^0\\.0\\.9$'
       - name: Publish package
         uses: gradle/gradle-build-action@v2
         with:
