github workflow edit

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,8 +34,8 @@ jobs:
         with:
           package-name: 'ru.serj.birds-app-api-base-v1'
           package-type: 'maven'
-          min-versions-to-keep: 0
-          ignore-versions: '^0\\.0\\.9$'
+          min-versions-to-keep: 2
+          delete-only-pre-release-versions: "true"
       - name: Publish package
         uses: gradle/gradle-build-action@v2
         with:
