--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - 'master'
+      - 'develop'
+      - 'task-*'
     pull_request:
       types:
         - opened
