--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 kotlin.code.style=official
-kotlinVersion=1.6.20
+kotlinVersion=1.8.20
 kotlinLogging=2.1.23
 kotlinDatetime=0.4.0
 kotlinExposedVersion=0.41.1
 ktorVersion=2.2.4
-birds.app.jvmTarget=11
+birds.app.jvmTarget=17
 birds.app.currentVersion=0.0.1
-coroutinesVersion=1.6.4
+coroutinesVersion=1.7.3
 jacksonVersion=2.14.1
 openapiVersion=6.3.0
 logbackVersion=1.4.6
@@ -21,3 +21,10 @@ moreAppendersLogbackVersion=1.8.8
 fluentdLoggerVersion=0.3.4
 logstashEncoderVersion=7.3
 shadowJarVersion=7.1.2
+
+springBootVersion=3.0.5
+springDependencyManagementVersion=1.1.0
+springPluginVersion=1.8.0
+springdocOpenapiUiVersion=1.6.14
+springmockkVersion=4.0.2
+
